fix useAuthorAddress flicker

--- a/src/components/feed-post/feed-post.module.css
+++ b/src/components/feed-post/feed-post.module.css
@@ -137,7 +137,7 @@
 
 .authorAddressChanged {
   animation-name: authorAddressChangedAnimation;
-  animation-duration: 0.07s;
+  animation-duration: 0.2s;
   animation-timing-function: ease-out;
   animation-delay: 0s;
   animation-iteration-count: 1;
